# MultiFuzz-benchmarks

./: .gitignore  .gitmodules  README.md  analyze-results.sh  benchmark-test.sh  build_all.sh  crash-analysis.md  multifuzz-ablation.sh  multifuzz-coverage.sh  replay.sh
analysis/: .gitignore  Cargo.toml  config.ron
analysis/metadata/: 6LoWPAN_Sender.json  CNC.json  Console.json  Drone.json  Gateway.json  Heat_Press.json  LiteOS_IoT.json  PLC.json  RF_Door_Lock.json  Reflow_Oven.json  Robot.json  Soldering_Iron.json  Steering_Control.json  Thermostat.json  XML_Parser.json  Zepyhr_SocketCan.json  riot-ccn-lite-relay.json  riot-filesystem.json  riot-gnrc_networking.json  uEmu.3Dprinter.json  uEmu.GPSTracker.json  utasker_MODBUS.json  utasker_USB.json
analysis/plot/: Cargo.toml
analysis/plot-data/: Cargo.toml
analysis/plot-data/src/: analysis.rs  config.rs  ember.rs  fuzzware.rs  lib.rs  main.rs  metadata.rs  multifuzz.rs
analysis/plot-data/src/data_loading/: json_map.rs  mod.rs
analysis/plot/src/: coverage.rs  inspector_cov.rs  main.rs  survival.rs  utils.rs
bench-harness/: .dockerignore  Cargo.toml  Dockerfile  config.toml
bench-harness/agent/: Cargo.toml
bench-harness/agent-interface/: Cargo.toml
bench-harness/agent-interface/src/: client.rs  command.rs  lib.rs  utils.rs
bench-harness/agent/config/: 50-limits.conf  autologin.conf  fstab
bench-harness/agent/src/: lib.rs  log_collector.rs  main.rs
bench-harness/bench-harness/: .gitignore  Cargo.toml
bench-harness/bench-harness/src/: afl.rs  config.rs  docker.rs  firecracker.rs  main.rs  setup.rs  tasks.rs  utils.rs  worker.rs
bench-harness/bench-harness/src/image_builder/: mod.rs  utils.rs
bench-harness/config/: arm-binaries.jinja  multifuzz-ablation.jinja  multifuzz-all.jinja  multifuzz.ron.jinja  quick-test.jinja
benchmarks/: README.md  build_new_binaries.sh
benchmarks/MultiFuzz/riot-ccn-lite-relay/: config.yml  valid_basic_blocks.txt
benchmarks/MultiFuzz/riot-filesystem/: config.yml  filesystem.elf  valid_basic_blocks.txt
benchmarks/MultiFuzz/riot-gnrc_networking/: config.yml  gnrc_networking.elf  valid_basic_blocks.txt
benchmarks/uEmu/Zepyhr_SocketCan/: uEmu.zephyrsocketcan.strings.txt
crashes/6LoWPAN_Receiver/: clock_rate_recursion  fragment_offset_oob  sercom0_init
crashes/GPSTracker/: gsm_get_imei_strstr  gsm_get_imei_strtok  gsm_get_time_strstr  gsm_get_time_strtok  sms_check_main_strstr  sms_check_strstr
crashes/Gateway/: zero_length_sysex
crashes/Zephyr_SocketCan/: canbus_attach_arg_count  canbus_attach_fp  canbus_attach_stm32_cc  canbus_config_stm32_cc  canbus_detach_fp  canbus_detach_stm32_cc  net_pkt  pwm_cycles
crashes/riot-ccn-lite-relay/: bad_ccnl_cs  ccnl_open  dangling_evtimer  dangling_evtimer.gdb  init_race  rtc_overflow
crashes/riot-gnrc_networking/: icmpv6_echo_send_overflow
crashes/utasker_MODBUS/: flash_memory_exec  memory_display  memory_fill  memory_modify  storage_display  storage_fill
crashes/utasker_USB/: control_callback_bad_interface  fnExtractFIFO_oob  fnUSB_handle_frame_endpoint  usb_storage_display
p2im-unittests/: README.md  run.sh
scripts/: ExportCfg.java
