[package]
name = "plot-data"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
glob = { workspace = true }
polars = { workspace = true }
polars-plan = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ron = { workspace = true }
indexmap = { workspace = true }
mimalloc = { workspace = true }
once_cell = { workspace = true }
libm = { workspace = true }
