[package]
name = "agent"
version = "0.1.18"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
agent-interface = { path = "../agent-interface" }
linux-raw-sys = "0.5.3"
crossbeam-channel = "0.5.8"

[target.'cfg(target_os = "linux")'.dependencies]
vsock = "0.3.0"
nix = { version = "0.27.1", features = ["ioctl", "signal"] }
