[package]
name = "bench-harness"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
crossbeam-channel = "0.5.8"
ctrlc = "3.4.1"
curl = "0.4.44"
csv = "1.2.2"
flate2 = "1.0.27"
indexmap = { version = "2.0.2", features = ["serde"] }
once_cell = "1.18.0"
parking_lot = "0.12.1"
clap = { version = "4.4.6", features = ["derive"]}
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tar = "0.4.40"
time = { version = "0.3.29", features = ["parsing", "formatting"] }
toml = { version = "0.8.1", features = ["parse"] }
tracing = { version = "0.1.37", default-features = false }
tracing-subscriber = { version = "0.3.17", default-features = false, features = ["fmt", "env-filter", "ansi"] }
walkdir = "2.4.0"
xshell = "0.2.5"
minijinja = { version = "2.0.2", default-features = false, features = ["macros", "builtins", "multi_template"] }
agent-interface = { path = "../agent-interface" }
agent = { path = "../agent" }
regex = { version = "1.9.6", default-features = false, features = ["std"] }
sha2 = "0.10.8"
ron = "0.8.1"
libc = "0.2.155"
